separated front end code, package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://necabunilas.github.io/chat-app/",
+  "homepage": "https://necabunilas.github.io/chat-app-react/",
   "name": "chat-app-front-end-vs",
   "version": "0.1.0",
   "private": true,
